--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 <div class="indexHeader">
 <div class="Ilogo">
-<img src="/upload/images/2021/8/ebf1be7a7f1d5315.png">
+<img src="/images/logo.png">
 </div>
 <nav>
 <ul class="navUl">
@@ -73,19 +73,19 @@
 </ul>
 <ul class="banner2">
 <li>
-<img class="m_logo" src="/upload/images/2021/8/8e54457119922615.png" />
+<img class="m_logo" src="/images/logo.png" />
 <span class="m_grayFont">移动及互联网服务</span>
 <span class="m_redFont">定制开发服务商</span>
 <span class="m_graySFont">专注定制化服务、微信、网站、APP、代运营</span>
 </li>
 <li>
-<img class="m_logo" src="/upload/images/2021/8/8e54457119922615.png" />
+<img class="m_logo" src="/images/logo.png" />
 <span class="m_grayFont">以微营销</span>
 <span class="m_redFont">为主导的广告公司</span>
 <span class="m_graySFont">微营销首选品牌，专业移动营销服务商</span>
 </li>
 <li>
-<img class="m_logo" src="/upload/images/2021/8/8e54457119922615.png">
+<img class="m_logo" src="/images/logo.png">
 <span class="m_grayFont">一站式互联网服务</span>
 <span class="m_redFont">解决方案提供商</span>
 <span class="m_graySFont">专注定制化服务、微信、网站、APP、代运营</span>
