--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <section class="inStxt indexJusty">
 <article class="insCle">
 <p class="insP">我们洞察商业所需，创造富有影响力的微营销体验，助力品牌价值提升。</p>
-<p class="insPc">百思创达是率属于上海追浪网络科技有限公司基于移动及互联网服务定制的开发服务商；百思创达是以微营销为主导的广告公司，微营销首选品牌，专业移动营销服务商。百思创达可以为品牌提供一站式互联网服务解决方案。</p>
+<p class="insPc">百思创达是率属于北京百思创达科技有限公司基于移动及互联网服务定制的开发服务商；百思创达是以微营销为主导的广告公司，微营销首选品牌，专业移动营销服务商。百思创达可以为品牌提供一站式互联网服务解决方案。</p>
 </article>
 </section>
 <div class="about_textBox">
@@ -117,7 +117,7 @@
 <span class="ab_redFont">我们洞察商业所需</span>
 <span class="ab_redFont">创造富有影响力的微营销体验</span>
 <span class="ab_redFont">助力品牌价值提升</span>
-<p class="ab_p">百思创达是率属于上海追浪网络科技有限公司基于移动及互联网服务定制的开发服务商；百思创达是以微营销为主导的广告公司，微营销首选品牌，专业移动营销服务商。百思创达可以为品牌提供一站式互联网服务解决方案。</p>
+<p class="ab_p">百思创达是率属于北京百思创达科技有限公司基于移动及互联网服务定制的开发服务商；百思创达是以微营销为主导的广告公司，微营销首选品牌，专业移动营销服务商。百思创达可以为品牌提供一站式互联网服务解决方案。</p>
 </div>
 </div>
 </div>
@@ -1238,20 +1238,14 @@
 <aside class="conArm"><span>Contact Us</span><br/>联系我们</aside>
 <section class="NumL_Section indexDisplay">
 <article class="Numl_Art indexFiex">
-<p><img src="images/icon/contactIocn01.png">86-21-51096506</p>
-<p><img src="images/icon/contactIocn02.png">86-21-51623718</p>
-<p><img src="images/icon/contactIocn03.png">上海市普陀区金沙江路1759号圣诺亚大厦A座510室</p>
+<p><img src="images/icon/contactIocn01.png">86-010-51096506</p>
+<p><img src="images/icon/contactIocn02.png">86-010-51623718</p>
+<p><img src="images/icon/contactIocn03.png">北京市海淀区上地信息路1号2号楼6层605</p>
 </article>
 <article class="Numl_Art">
 <section class="NumLe"><a href="http://wpa.qq.com/msgrd?v=3&amp;uin=223652&amp;site=qq&amp;menu=yes" target="_blank"><img src="images/icon/line1.png"></a><br/>在线咨询</section>
 </article>
 </section>
-<article class="contentMun">
-<aside>把您的需求告诉我们，让我们优秀的团队为您服务:</aside>
-<iframe id="iframe_5051c94e1bddd081" frameborder="0" scrolling="no" src="/assets/form/templates/lxwm/index.html?siteId=1&formId=1&apiUrl=%2fapi" style="width: 1px;min-width: 100%;"></iframe>
-<script type="text/javascript" src="/assets/form/lib/iframe-resizer-3.6.3/iframeResizer.min.js"></script>
-<script type="text/javascript">iFrameResize({log:false},'#iframe_5051c94e1bddd081')</script>
-</article>
 </article>
 </div>
 <div class="NumContact_right">
@@ -1259,9 +1253,9 @@
 <img src="images/img/erweima.png">
 <section class="NumConR_section indexJusty">
 <article class="NumR_a">
-<p>免费咨询热线：<br/><span>133-1112-5757</span></p>
+<p>免费咨询热线：<br/><span>010-51096506</span></p>
 <img src="images/img/callPhone.png">
-<br/><a style="color: gray;font-size: 16px;" href="https://beian.miit.gov.cn" target="_blank">京ICP备13026324号</a>
+<br/><a style="color: gray;font-size: 16px;" href="https://beian.miit.gov.cn" target="_blank">京ICP备13026394号</a>
 </article>
 </section>
 </article>
@@ -1274,9 +1268,9 @@
 <img src="images/img/zhuilang_wx.jpg" class="con_code">
 <p class="con_font1">扫描二维码关注百思创达</p>
 <img src="images/img/logoImg.png" class="con_logo">
-<div class="con_font2">咨询热线：<b> <a href="tel:800-820-8295">133-1112-5757</a></b></div>
-<div class="con_font3">公司地址：上海市普陀区金沙江路1759号</div>
-<div class="con_font4"><label>空</label>圣诺亚大厦A座510室</div>
+<div class="con_font2">咨询热线：<b> <a href="tel:">010-51096506</a></b></div>
+<div class="con_font3">公司地址：北京市海淀区上地信息路1号2号楼6层605</div>
+<div class="con_font4"><label>空</label></div>
 <div class="con_bottom " id="tel"><a href="tel:"><img src="images/ydimg/con_icon.png">立即拨打</a></div>
 </div>
 </div>
