edit tel number

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <menu>
 <li class="liHidden"><img src="images/icon/del.png"></li>
 <li><img src="images/icon/rwm.png"></li>
-<li>免费营销热线：800-820-8295</li>
+<li>免费营销热线：86-010-51096506</li>
 </menu>
 </div>
 <div class="fixed_r">
