del wechat icon

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 </nav>
 <menu>
 <li class="liHidden"><img src="images/icon/del.png"></li>
-<li><img src="images/icon/rwm.png"></li>
 <li>免费营销热线：86-010-51096506</li>
 </menu>
 </div>
@@ -1243,14 +1242,13 @@
 <p><img src="images/icon/contactIocn03.png">北京市海淀区上地信息路1号2号楼6层605</p>
 </article>
 <article class="Numl_Art">
-<section class="NumLe"><a href="http://wpa.qq.com/msgrd?v=3&amp;uin=223652&amp;site=qq&amp;menu=yes" target="_blank"><img src="images/icon/line1.png"></a><br/>在线咨询</section>
+<section class="NumLe"><a href="http://wpa.qq.com/msgrd?v=3&amp;uin=&amp;site=qq&amp;menu=yes" target="_blank"><img src="images/icon/line1.png"></a><br/>在线咨询</section>
 </article>
 </section>
 </article>
 </div>
 <div class="NumContact_right">
 <article class="NumConR_article">
-<img src="images/img/erweima.png">
 <section class="NumConR_section indexJusty">
 <article class="NumR_a">
 <p>免费咨询热线：<br/><span>010-51096506</span></p>
