edit title name

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<title>百思创达 - 微营销服务品牌，专注移动互联网</title>
-<meta id="keywords" name="keywords" content="微信营销,微信开发,微信托管,微信代运营,微信支付,微信小程序,H5游戏,H5动画,H5活动,网站建设,网页设计" />
+<title>5A.ink - 百思创达微营销服务品牌，专注移动互联网</title>
+<meta id="keywords" name="keywords" content="微信营销,微信开发,微信托管,微信代运营,微信支付,微信小程序,H5游戏,H5动画,H5活动,网站建设,网页设计,5a.ink" />
 <meta id="description" name="description" content="移动及互联网服务定制开发服务商,专注定制化服务，微信、网站、微信小程序、H5、营销、代运营。" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
